--- a/docker/nginx/conf.d/default.conf.template
+++ b/docker/nginx/conf.d/default.conf.template
@@ -13,7 +13,7 @@ server {
     # ACME Challenge Location for SSL certification
     location /.well-known/acme-challenge/ { 
         root /var/www/html; 
-        try_files $uri =404;
+        try_files $uri =404; 
     }
 }
 
@@ -33,38 +33,38 @@ server {
 
     location /console/api {
       proxy_pass http://api:5001;
-      include proxy.conf;
+      include /etc/nginx/proxy.conf;
     }
 
     location /api {
       proxy_pass http://api:5001;
-      include proxy.conf;
+      include /etc/nginx/proxy.conf;
     }
 
     location /v1 {
       proxy_pass http://api:5001;
-      include proxy.conf;
+      include /etc/nginx/proxy.conf;
     }
 
     location /files {
       proxy_pass http://api:5001;
-      include proxy.conf;
+      include /etc/nginx/proxy.conf;
     }
 
     location /explore {
       proxy_pass http://web:3000;
-      include proxy.conf;
+      include /etc/nginx/proxy.conf;
     }
 
     # Nur aktivieren, wenn der Plugin-Daemon-Service läuft
     # location /e/ {
     #   proxy_pass http://plugin_daemon:5002;
     #   proxy_set_header Dify-Hook-Url $scheme://$host$request_uri;
-    #   include proxy.conf;
+    #   include /etc/nginx/proxy.conf;
     # }
 
     location / {
       proxy_pass http://web:3000;
-      include proxy.conf;
+      include /etc/nginx/proxy.conf;
     }
 }
