--- a/docker/nginx/conf.d/default.conf.template
+++ b/docker/nginx/conf.d/default.conf.template
@@ -1,19 +1,45 @@
 # Please do not directly edit this file. Instead, modify the .env variables related to NGINX configuration.
 
+# Temporary HTTP-only configuration for Certbot validation
+
 # HTTP server
 server {
     listen ${NGINX_PORT};
     server_name ${NGINX_SERVER_NAME};
 
-    # Redirect all HTTP requests to HTTPS if HTTPS is enabled
-    location / {
-        return 301 https://$host$request_uri;
-    }
+    # Root directory for serving files
+    root /var/www/html;
 
     # ACME Challenge Location for SSL certification
     location /.well-known/acme-challenge/ { 
-        root /var/www/html; 
-        try_files $uri =404; 
+        allow all;
+        try_files $uri =404;
+    }
+
+    # For all other requests, serve the web application
+    location / {
+        proxy_pass http://web:3000;
+        include /etc/nginx/proxy.conf;
+    }
+
+    location /console/api {
+      proxy_pass http://api:5001;
+      include /etc/nginx/proxy.conf;
+    }
+
+    location /api {
+      proxy_pass http://api:5001;
+      include /etc/nginx/proxy.conf;
+    }
+
+    location /v1 {
+      proxy_pass http://api:5001;
+      include /etc/nginx/proxy.conf;
+    }
+
+    location /files {
+      proxy_pass http://api:5001;
+      include /etc/nginx/proxy.conf;
     }
 }
 
