--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -623,6 +623,8 @@ services:
       - CERTBOT_OPTIONS=${CERTBOT_OPTIONS:-}
     entrypoint: ["/docker-entrypoint.sh"]
     command: ["tail", "-f", "/dev/null"]
+    networks:
+      - default
 
   # The nginx reverse proxy.
   nginx:
@@ -645,8 +647,8 @@ services:
         "cp /docker-entrypoint-mount.sh /docker-entrypoint.sh && sed -i 's/\r$$//' /docker-entrypoint.sh && chmod +x /docker-entrypoint.sh && /docker-entrypoint.sh",
       ]
     environment:
-      NGINX_SERVER_NAME: ${NGINX_SERVER_NAME:-_}
-      NGINX_HTTPS_ENABLED: ${NGINX_HTTPS_ENABLED:-true}
+      NGINX_SERVER_NAME: ${NGINX_SERVER_NAME:-flexable-studio.mind-verse.de}
+      NGINX_HTTPS_ENABLED: ${NGINX_HTTPS_ENABLED:-false}
       NGINX_SSL_PORT: ${NGINX_SSL_PORT:-443}
       NGINX_PORT: ${NGINX_PORT:-80}
       NGINX_SSL_CERT_FILENAME: ${NGINX_SSL_CERT_FILENAME:-fullchain.pem}
@@ -666,6 +668,8 @@ services:
     ports:
       - "${EXPOSE_NGINX_PORT:-80}:${NGINX_PORT:-80}"
       - "${EXPOSE_NGINX_SSL_PORT:-443}:${NGINX_SSL_PORT:-443}"
+    networks:
+      - default
 
   # The Weaviate vector store.
   weaviate:
@@ -1026,6 +1030,8 @@ services:
 
   webserver:
     image: nginx:alpine
+    profiles:
+      - webserver
     ports:
       - "8080:80"
       - "8443:443"
@@ -1033,7 +1039,7 @@ services:
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./volumes/certbot/www:/var/www/html
     environment:
-      - NGINX_SERVER_NAME=${NGINX_SERVER_NAME:-_}
+      - NGINX_SERVER_NAME=${NGINX_SERVER_NAME:-flexable-studio.mind-verse.de}
       - NGINX_PORT=${NGINX_PORT:-80}
     entrypoint: ["/docker-entrypoint.sh"]
     command: ["nginx", "-g", "daemon off;"]
