--- a/docker/nginx/conf.d/default.conf.template
+++ b/docker/nginx/conf.d/default.conf.template
@@ -1,8 +1,6 @@
 # Please do not directly edit this file. Instead, modify the .env variables related to NGINX configuration.
 
-# Temporary HTTP-only configuration for Certbot validation
-
-# HTTP server
+# HTTP server for Certbot validation and regular HTTP traffic
 server {
     listen ${NGINX_PORT};
     server_name ${NGINX_SERVER_NAME};
@@ -16,41 +14,58 @@ server {
         try_files $uri =404;
     }
 
-    # For all other requests, serve the web application
+    # If HTTPS is enabled, redirect all other HTTP requests to HTTPS
+    # Otherwise, serve the web application directly
     location / {
+        if (${NGINX_HTTPS_ENABLED} = true) {
+            return 301 https://$host$request_uri;
+        }
         proxy_pass http://web:3000;
         include /etc/nginx/proxy.conf;
     }
 
+    # Only serve these locations if HTTPS is not enabled
     location /console/api {
-      proxy_pass http://api:5001;
-      include /etc/nginx/proxy.conf;
+        if (${NGINX_HTTPS_ENABLED} = true) {
+            return 301 https://$host$request_uri;
+        }
+        proxy_pass http://api:5001;
+        include /etc/nginx/proxy.conf;
     }
 
     location /api {
-      proxy_pass http://api:5001;
-      include /etc/nginx/proxy.conf;
+        if (${NGINX_HTTPS_ENABLED} = true) {
+            return 301 https://$host$request_uri;
+        }
+        proxy_pass http://api:5001;
+        include /etc/nginx/proxy.conf;
     }
 
     location /v1 {
-      proxy_pass http://api:5001;
-      include /etc/nginx/proxy.conf;
+        if (${NGINX_HTTPS_ENABLED} = true) {
+            return 301 https://$host$request_uri;
+        }
+        proxy_pass http://api:5001;
+        include /etc/nginx/proxy.conf;
     }
 
     location /files {
-      proxy_pass http://api:5001;
-      include /etc/nginx/proxy.conf;
+        if (${NGINX_HTTPS_ENABLED} = true) {
+            return 301 https://$host$request_uri;
+        }
+        proxy_pass http://api:5001;
+        include /etc/nginx/proxy.conf;
     }
 }
 
-# HTTPS server
+# HTTPS server - will be conditionally included based on the existence of certificates
 server {
     listen ${NGINX_SSL_PORT} ssl;
     server_name ${NGINX_SERVER_NAME};
 
-    # Überprüfe, ob die Zertifikate existieren
-    ssl_certificate_key /etc/letsencrypt/live/${CERTBOT_DOMAIN}/privkey.pem;
-    ssl_certificate /etc/letsencrypt/live/${CERTBOT_DOMAIN}/fullchain.pem;
+    # SSL certificates
+    ssl_certificate_key /etc/letsencrypt/live/${CERTBOT_DOMAIN}/${NGINX_SSL_CERT_KEY_FILENAME};
+    ssl_certificate /etc/letsencrypt/live/${CERTBOT_DOMAIN}/${NGINX_SSL_CERT_FILENAME};
     ssl_protocols ${NGINX_SSL_PROTOCOLS};
 
     client_max_body_size ${NGINX_CLIENT_MAX_BODY_SIZE};
